--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,13 +1,58 @@
  <div class="toast custom-toast rounded border-top-0 slide-in" data-autohide="false">
     <div class="arrow-up arrow-success"></div>
     <div class="w-100 toast-capper bg-success"></div>
-    <div class="toast-header bg-white text-dark">
+    <div class="toast-header bg-white text-dark ml-2">
         <strong class="mr-auto">Success!</strong>
         <button type="button" class="ml-2 mb-1 close text-dark" data-dismiss="toast" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
-    <div class="toast-body bg-white">
-        {{ message }}        
+    <div class="toast-body bg-white ml-2">
+        <div class="row">
+        {{ message }} 
+        </div>       
+    </div>
+
+    {% if grand_total %}
+    <div class="cart-summary bg-white text-black py-2">
+        <h2 class="logo-font">Your Bag:</h2>
+        <div class="bag-notification-wrapper">
+            <div class="cart-items">
+                {% for item in cart_items %}
+                    <div class="row cart-item">
+                        <div class="col-3 item-image my-2">
+                            <img class="w-100" src="/media/small/{{ item.product.productImageName }}" alt="{{ item.product.title }} image">
+                        </div>
+                        <div class="col-9 item-details">
+                            <p class="item-name mb-1"><strong>{{ item.product.title }}</strong></p>
+                            <p class="item-quantity mb-1">Quantity: {{ item.quantity }}</p>
+                            <p class="item-price small">Price per Item: <span>${{ item.product.price }}</span></p>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+            <div class="row cart-total">
+                <div class="col d-block justify-content-center">
+                    <p class="total-amount mt-3 mb-1 text-black">
+                        <strong>
+                            Total{% if free_delivery_delta > 0 %} (excluding delivery){% endif %}: 
+                            <span class="float-right d-block">${{ total|floatformat:2 }}</span>
+                        </strong>
+                    </p>
+                    {% if free_delivery_delta > 0 %}
+                        <p class="delivery-notice mb-0 p-2 bg-warning shadow-sm text-black text-center">
+                            Add <strong>${{ free_delivery_delta }}</strong> more to qualify for free next-day delivery!
+                        </p>
+                    {% endif %}
+                    <div class="col d-block justify-content-center">
+                        <a href="{% url 'view_cart' %}" class="btn btn-primary rounded btn-lg ml-4">
+                            Secure Checkout
+                            <i class="fas fa-lock ml-2"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+{% endif %}
