--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -3,9 +3,9 @@
 <footer id="footer">
   <div class="footer-top">
     <div class="container">
-      <div class="row justify-content-center gap-3">
+      <div class="row justify-content-center">
 
-        <div class="col-lg-3 col-md-6 mx-auto">
+        <div class="col-lg-4 col-md-6 mx-auto">
           <h5 class="text-uppercase">Tibet Art Store</h5>
           <p>
             Potsdamer Platz <br>
@@ -16,24 +16,24 @@
           </p>
         </div>
 
-        <div class="col-lg-4 col-md-6 mx-auto">
+        <div class="col-lg-4 col-md-6 mx-auto mb-3">
           <h5 class="text-uppercase">Join Our Newsletter</h5>
           <p>GET 10% OFF when you sign up to our newsletter</p>
           <p>Plus stay up to date with new arrivals, offers events and lots more!</p>
           <form action="" method="post">
               {% csrf_token %}
-            <input type="email" name="email"><input type="submit" class="btn btn-sm rounded ml-2 " value="Subscribe">
+            <input type="email" name="email"placeholder="Your email address"><input type="submit" class="btn btn-sm rounded ml-2 " value="Subscribe">
           </form>
         </div>
 
-        <div class="col-lg-2 col-md-6 mx-auto">
+        <div class="col-lg-4 col-md-6 mx-auto">
           <h5 class="text-uppercase">Quick Links</h5>
-          <u>
-            <li><a href="{% url 'home' %}">Home</a></li>
-            <li><a href="">About us</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Terms of service</a></li>
-            <li><a href="#">Privacy policy</a></li>
+          <ul>
+            <li><a class="quick-link" href="{% url 'home' %}">Home</a></li>
+            <li><a class="quick-link" href="">About us</a></li>
+            <li><a class="quick-link" href="#">Blog</a></li>
+            <li><a class="quick-link" href="#">Terms of service</a></li>
+            <li><a class="quick-link" href="#">Privacy policy</a></li>
           </ul>
         </div>
       </div>
