--- a/templates/allauth/account/email.html
+++ b/templates/allauth/account/email.html
@@ -5,9 +5,11 @@
 {% block head_title %}{% trans "Account" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "E-mail Addresses" %}</h1>
-{% if user.emailaddress_set.all %}
-<p>{% trans 'The following e-mail addresses are associated with your account:' %}</p>
+<div class="col-12 d-flex justify-content-center">
+  <div class="container text-center form-text">
+    <h1 class="linebreak logo-font mb-4 text-uppercase">{% trans "E-mail Addresses" %}</h1>
+  {% if user.emailaddress_set.all %}
+  <p>{% trans 'The following e-mail addresses are associated with your account:' %}</p>
 
 <form action="{% url 'account_email' %}" class="email_list" method="post">
 {% csrf_token %}
