--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -2,51 +2,29 @@
 
 {% load static %}
 {% load crispy_forms_tags %}
-
 {% load i18n %}
-{% load account socialaccount %}
 
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
-
 {% block content %}
-<div class="container text-center form-text">
-  <h2 class="linebreak logo-font mb-4 text-uppercase">{% trans "Sign In" %}</h2>
+<div class="col-12 d-flex justify-content-center">
+  <div class="container text-center form-text">
+    <h1 class="linebreak logo-font mb-4 text-uppercase">{% trans "Sign In" %}</h1>
+    
+    <p>{% blocktrans %}If you have not created an account yet, then please
+      <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
 
-  {% get_providers as socialaccount_providers %}
 
-  {% if socialaccount_providers %}
-    <p>{% blocktrans with site.name as site_name %}Please sign in with one
-    of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
-    for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
-
-    <div class="socialaccount_ballot">
-
-      <ul class="socialaccount_providers">
-        {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-      </ul>
-
-      <div class="login-or">{% trans 'or' %}</div>
-
-    </div>
-
-    {% include "socialaccount/snippets/login_extra.html" %}
-
-  {% else %}
-  <p>{% blocktrans %}If you have not created an account yet, then please
-  <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
-  {% endif %}
-
-  <form class="form" method="POST" action="{% url 'account_login' %}">
-    {% csrf_token %}
-    {{ form | crispy }}
-    {% if redirect_field_value %}
-    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-    {% endif %}
-    <a class="btn btn-outline-dark w-25" href="{% url 'home' %}">Home</a>
-       
-    <button class="btn btn-outline-dark w-25" type="submit">{% trans "Sign In" %}</button>
-    <a class="button secondaryAction d-block" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-  </form>
+    <form class="form" method="POST" action="{% url 'account_login' %}">
+      {% csrf_token %}
+      {{ form | crispy }}
+      {% if redirect_field_value %}
+      <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+      {% endif %}
+        
+      <button class="btn btn-outline-dark w-25" type="submit">{% trans "Sign In" %}</button>
+      <a class="button secondaryAction d-block" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+    </form>
+  </div>
 </div>
-
 {% endblock %}
+
