--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,22 +1,20 @@
-
 html {
     height: 100%;
 }
 body {
-    background: url('/media/small/GT-CB-8_5-4.jpg');
+    /* background: url('/media/small/GT-CB-8_5-4.jpg'); */
     height: 100vh;
     width: 100%;
     background-size: cover;
     background-position: top 25% right 0;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 100%;
     margin: 0;
- 
 }
+
 main {
-    flex-grow: 1;
-    
+    flex-grow: 1 0 auto;    
 }
 .header-container {
     z-index: 10;
@@ -93,17 +91,37 @@ main {
 .quick-link {
     color: black;
 }
+footer {
+    min-height: 60px;
+    flex-shrink: 0;
+
+}
+footer p {
+    margin: 0; 
+    padding: 5px;
+}
+
+footer a {
+    margin: 0 5px;
+}
+
 
 #footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
     background-color:  #ede8dc;
     padding: 10px;
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
     width: 100%;
+    flex-shrink: 0;
 }
+
 .social-icon {
     width: 25px;
     height: auto;
-    margin: 5px 5px 20px;
+    margin: 5px 5px 5px;
 }
 .social-links {
     display: flex;
@@ -129,9 +147,9 @@ main {
 }
 
 .linebreak {
+    display: inline-block;
     border-bottom: 1px solid rgba(80, 57, 12, 0.579);
-    width: 50%;
-    margin: auto;
+    width: auto;
     box-shadow: 1px 1px 5px 0 #d4c1c361;
 }
 
@@ -150,7 +168,7 @@ input.form-control {
 }
 
 input.form-control::placeholder {
-    color: #aaa;
+    color:lightgray;
 }
 
 input.form-control:hover,
@@ -191,13 +209,12 @@ button:hover,
     color: white;
 }
 
-
  .message-container {
     position: fixed;
     top: 72px;
     right: 15px;
     z-index: 99999999;
-    transition: transform 0.3s ease-in-out;
+    /* transition: transform 0.3s ease-in-out; */
 }
 
 .custom-toast {
@@ -226,7 +243,7 @@ button:hover,
 
 .table-bg {
     background-color:  #ede8dc;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0px 4px 6px rgba(242, 166, 166, 0.1); */
 }
 .product-form {
     max-width: 600px;
@@ -248,6 +265,23 @@ button:hover,
 .label-strong {
     font-weight: bold;
     margin-bottom: 5px;
+}
+
+/*-----pagination---*/
+
+.pagination-container {
+    display: flex;
+    justify-content: center; 
+    align-items: center;          
+}
+.adjusted-pag {
+    color: #000;
+    margin-top: -60px;
+    margin-bottom: 20px;
+}
+
+.pagination .step-links {
+    text-align: center;
 }
 
 .cart-summary {
@@ -279,7 +313,6 @@ button:hover,
     padding-bottom: 10px;
     margin-bottom: 10px;
 }
-
 
 .item-image img {
     border-radius: 10px;
@@ -335,7 +368,14 @@ button:hover,
         background-repeat: no-repeat;
         background-color:  #ede8dc;;
     }
+    footer {
+        font-size: .8rem;
+    }
+    footer ul {
+        list-style-type: none;
+    }
 }
+   
 
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) { 
@@ -345,7 +385,13 @@ button:hover,
       background-repeat: no-repeat;
       background-color:  #ede8dc;;
     }
-  }
+    footer {
+        font-size: 1rem;
+    }
+    footer ul {
+        list-style-type: none;
+    }
+}
   
   /* Medium devices (tablets, 768px and up) */
   @media (min-width: 768px) { 
@@ -353,6 +399,7 @@ button:hover,
       background-size: cover;
       background-position: center top;
     }
+
   }
   
   /* Large devices (desktops, 992px and up) */
@@ -371,14 +418,13 @@ button:hover,
     }
   }
 
-
 @media (max-width: 576px) {
     .custom-heading {
         font-size: 1rem;
     }
 }
 
-@media (min-width: 576px) and (max-width: 768px) {
+@media (min-width: 577px) and (max-width: 768px) {
     .custom-heading {
         font-size: 1.5rem;
     }
