--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -4,33 +4,33 @@
     <div class="container-fluid">
       <div class="row justify-content-center text-center text-lg-left">
 
-        <div class="col-lg-4 col-md-6 mx-auto">
+        <div class="col-lg-4 col-md-6 d-none d-md-inline-block">
           <h5 class="text-uppercase">Tibet Art Store</h5>
           <p>
             Potsdamer Platz <br>
             Berlin, Berlin<br>
             Germany <br><br>
             <strong>Phone:</strong> +49 178 55488 55<br>
-            <strong>Email:</strong> info@example.com<br>
+            <strong>Email:</strong> info@tibetartstore.com<br>
           </p>
         </div>
 
-        <div class="col-lg-4 col-md-6 mx-auto mb-3">
-          <h5 class="text-uppercase">Join Our Newsletter</h5>
-          <p>GET 10% OFF when you sign up to our newsletter</p>
-          <p>Plus stay up to date with new arrivals, offers events and lots more!</p>
-          <form action="" method="post" class="text-center text-lg-left">
+        <div class="col-lg-4 col-md-6">
+          <h5>Join Our Newsletter</h5>
+          <p>GET 10% OFF when you sign up to our newsletter
+          Plus stay up to date with new arrivals, offers events and lots more!</p>
+          <form action="" method="post" class="text-center text-lg-left my-2">
               {% csrf_token %}
             <input type="email" name="email"placeholder="Your email address"><input type="submit" class="btn btn-sm rounded ml-2 " value="Subscribe">
           </form>
         </div>
 
-        <div class="col-lg-4 col-md-6 mx-auto">
-          <h5 class="text-uppercase">Quick Links</h5>
+        <div class="col-lg-4 col-md-6">
+          <h5>Quick Links</h5>
           <ul class="text-center text-lg-left">
             <li><a class="quick-link" href="{% url 'home' %}">Home</a></li>
-            <li><a class="quick-link" href="">About us</a></li>
-            <li><a class="quick-link" href="#">Blog</a></li>
+            <li class="d-none d-md-inline-block"><a class="quick-link" href="">About us</a></li>
+            <li class="d-none d-md-inline-block"><a class="quick-link" href="#">Blog</a></li>
             <li><a class="quick-link" href="#">Terms of service</a></li>
             <li><a class="quick-link" href="#">Privacy policy</a></li>
           </ul>
@@ -39,17 +39,17 @@
     </div>
   </div>
 
-  <div class="container py-4">
-    <div class="d-flex justify-content-center px-2 text-center">
+  <div class="container">
+    <div class="d-flex justify-content-center text-center">
       <div class="copyright">
         &copy;<strong><span>pzompa 2023</span></strong>.
       </div>
-      <div class="px-2">
+      <div class="px-2 d-none d-lg-block">
         Created for Code Institute assessment purposes only! 
       </div>
     </div>
 
-    <div class="social-links text-center py-5 pt-md-0">
+    <div class="social-links text-center">
       <a href="https://facebook.com/" target="_blank" rel="noopener" aria-label="link to facebook- opens in a new tab">
         <img src=https://res.cloudinary.com/dript5k0k/image/upload/v1688732514/facebook-app-icon-_3__lyymdz.webp alt=" facebook icon" class="social-icon">
       </a>
